--- a/0723/style.css
+++ b/0723/style.css
@@ -66,7 +66,7 @@ button:hover {
     background-color: #fff;
     border-radius: 5px;
     margin-top: 20px;
-    padding: 10px, 25px;
+    padding: 10px 25px;
     height: 100%;
 }
 
@@ -84,6 +84,14 @@ li {
     color: #595959;
 }
 
+i {
+    pointer-events: none;
+}
+
+.todo-item {
+    flex-grow: 1;
+}
+
 .clearAll {
     display: flex;
     justify-content: flex-end;
@@ -96,3 +104,11 @@ li {
     color: lightcoral;
 }
 
+.todo-list-item {
+    transition: all 0.3s ease-out;
+}
+
+.todo-list-item-fall {
+    transform: translateY(12rem) rotateZ(10deg);
+    opacity: 0;
+}
