--- a/0803_Cursor Animation/style.css
+++ b/0803_Cursor Animation/style.css
@@ -13,8 +13,7 @@ body{
     text-decoration: none;
     font-size: 1.5rem;
     color: coral;
-    margin: 0 1rem;
-
+    margin: 0 3rem;
     font-weight: 700;
 }
 
@@ -22,12 +21,12 @@ body{
 nav{
     display: flex;
     justify-content: space-between;
-    width: 90%;
-    min-height: 10vh;
+    width: 100%;
+    min-height: 1vh;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
 
-
+    box-shadow: 2px 2px 12px #ccc;
 }
 
 .nav-links {
@@ -36,19 +35,28 @@ nav{
     justify-content: flex-end;
     
     list-style: none; 
-
+    margin: 0 2rem;
 }
 
 .nav-links li{
     padding: 1rem;
     margin: 0 1rem;
-    
     font-size: .8rem;
 }
 
 .nav-links a{
     text-decoration: none;
-    color: mediumslateblue;
+    color: coral;
+}
+
+.nav-links a:hover{
+    color: black;
+    transition: 0.5s;
+}
+
+.nav-links a:active{
+    color: white;
+    transition: .01s;
 }
 
 .nav-links, h1{
@@ -66,35 +74,53 @@ nav{
     transition: all 0.2s ease;
     transition-property: background, transform;
     transform-origin: 100% 100%;
-    z-index: -1;
-    backdrop-filter: blur(3px);
+    z-index: 1;
+    backdrop-filter: blur(2px);
 }
 
 .link-grow{
     transform: scale(1.3) translate(-25%, -25%);
     background: lightcoral;
+    opacity: .5;
+    z-index: 1;
 }
 
 .hovered-link{
     color: white;
 }
 
-.front-cover img{
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    
-    width: 300px;
-    z-index: -3;
+.front-cover{
+    background: linear-gradient(to right, rgba(0,0,0,0.3), rgba(0,0,0,.8), rgba(0,0,0,.3));
+    height: 450px;
+}
 
+.front-cover img{
+    position: flex;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 450px;
+    z-index: -3;
 }
 section{
-    padding: 1rem;
+    padding: .5rem 0;
 }
 .font-desc{
+    display:flex;
     justify-content: center;
     align-items: center;
-
-    display: flex;
     flex-direction: column;
+}
+.font-desc h3{
+    letter-spacing: -2px;
+}
+.font-desc p{
+    display: absolute;
+    margin-top:-120px;
+    letter-spacing: 8px;
+    padding-left: 15px;
+    color: white;
+    z-index: 50;
+    font-size: 12px;
+    font-weight: 800;
 }
