--- a/0803_Cursor Animation/style.css
+++ b/0803_Cursor Animation/style.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor:none;
 }
 
 body{
     font-family: "Poppins", sans-serif;
     overflow: hidden;
+    cursor:none;
 }
 
 .logo{
@@ -75,7 +77,7 @@ nav{
     transition-property: background, transform;
     transform-origin: 100% 100%;
     z-index: 1;
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(1px);
 }
 
 .link-grow{
@@ -83,6 +85,7 @@ nav{
     background: lightcoral;
     opacity: .5;
     z-index: 1;
+
 }
 
 .hovered-link{
