--- a/0803_Cursor Animation/style.css
+++ b/0803_Cursor Animation/style.css
@@ -11,14 +11,6 @@ body{
     cursor:none;
 }
 
-.logo{
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: coral;
-    margin: 0 3rem;
-    font-weight: 700;
-}
-
 
 nav{
     display: flex;
@@ -31,6 +23,14 @@ nav{
     box-shadow: 2px 2px 12px #ccc;
 }
 
+.logo{
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: coral;
+    margin: 0 3rem;
+    font-weight: 700;
+}
+
 .nav-links {
     display: flex;
     
@@ -41,9 +41,9 @@ nav{
 }
 
 .nav-links li{
-    padding: 1rem;
+    padding: .5rem;
     margin: 0 1rem;
-    font-size: .8rem;
+    font-size: .6rem;
 }
 
 .nav-links a{
@@ -126,4 +126,16 @@ section{
     z-index: 50;
     font-size: 12px;
     font-weight: 800;
+}
+
+@media(min-width:700px){
+    nav{
+        width:100%;
+    }
+
+    .nav-links li{
+        padding: 1rem;
+        margin: 0 1rem;
+        font-size: .8rem;
+    }
 }
